dropdown added done practice 2

--- a/style/practice.css
+++ b/style/practice.css
@@ -8,14 +8,27 @@
     margin-top: 22px;
     padding-left: 10px;
     padding-right: 10px;
- 
 }
 
 a{
     font-weight: bold;
 }
 
+.form{
+    margin-top: 20px;;
+}
+
 .form label{
     display:block;
     margin-bottom: 15px;
+}
+
+/* For specific css style for input type */
+input[type="submit"] {
+    margin-bottom: 10px;
+}
+
+.rate{
+    
+    font-weight: 600;
 }
