added new file to flex CSS model

--- a/style/index.css
+++ b/style/index.css
@@ -19,7 +19,9 @@ a{
 }
 
 .form label{
-    display:block;
+    /* display:block; */
+    display: flex;
+    /* align-items: start; */
     margin-bottom: 15px;
 }
 
